2005-06-19  Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am: Implement libusb-base USB transport for the
	JTAG ICE mkII.
	* configure.ac: ditto.
	* jtagmkII.c: ditto.
	* ser_posix.c: ditto.
	* ser_win32.c: ditto.
	* serial.h: ditto.
	* usb_libusb.c: ditto (New file).
	* avrdude.1: document the USB transport.
	* doc/avrdude.texi: ditto.

2005-06-15  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: The AT90CAN128 has AllowFullPageBitstream = no.

2005-06-14  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the ATmega164/324/644.
	* jtagmkII.c: If enter_progmode fails with RSP_ILLEGAL_JTAG_ID, give
	the user a hint that the JTAGEN fuse might be unset.

2005-06-11  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the ATmega329x/649x.

2005-05-27  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: fix a signedness bug when shifting bits; when
	discarding a packet for being overly long, restart the state
	machine instead of attempting to drop a preposterous amount
	of data.

2005-05-19  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.1:
	* doc/avrdude.texi: Document that the JTAG ICE mkII code currently
	cannot write to flash one byte at a time.  Also mention the bug
	tracker interface on savannah.

2005/05/14  Brian S. Dean  <bsd@bsdhome.com>

	* configure.ac:
	* main.c:
	  Update version for beta release and copyright message.
	  Change the default port to 'serial' for the newly added serial
	  programmers stk500v2 and jtagmkii.

2005-05-10  Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am:
	* avr910.c:
	* avrdude.1:
	* avrdude.conf.in:
	* avrpart.c:
	* avrpart.h:
	* butterfly.c:
	* config_gram.y:
	* crc16.c:
	* crc16.h:
	* jtagmkII.c:
	* jtagmkII.h:
	* jtagmkII_private.h:
	* lexer.l:
	* main.c:
	* pgm.h:
	* serial.h:
	* ser_posix.c:
	* ser_win32.c:
	* stk500.c:
	* stk500v2.c:
	* stk500v2.h:
	* stk500v2_private.h:
	* doc/avrdude.texi:

	Mega-commit to bring in both, the STK500v2 support from Erik